force-app/main/default/objects/Booking_Split__c/Booking_Split__c.object-meta.xml
<CustomObject>
    <description>SOX object - To capture the split % of booking allocated to rep</description>
    <label>Booking Split</label>
    <nameField>
        <displayFormat>BS-{0000000}</displayFormat>
        <label>Booking Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>