force-app/main/default/objects/Booking_Split__c/fields/Gross_ACV_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_ACV_Amount__c</fullName>
    <formula>Booking__r.Gross_ACV_Total__c * Opportunity_Split__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross ACV Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>