force-app/main/default/objects/Booking_Split__c/fields/Gross_Bookings_Total_By_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Gross_Bookings_Total_By_Percentage__c</fullName>
    <formula>Booking__r.Gross_Bookings_Total__c* Opportunity_Split__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross TCV Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>