force-app/main/default/objects/Booking_Split__c/fields/Gross_New_Expansion_ACV__c.field-meta.xml
<CustomField>
    <fullName>Gross_New_Expansion_ACV__c</fullName>
    <formula>Booking__r.Gross_New_Expansion_ACV__c* Opportunity_Split__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross New/Expansion ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>