force-app/main/default/objects/Booking_Split__c/fields/Net_ACV_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_ACV_Amount__c</fullName>
    <formula>Booking__r.Net_ACV_Total__c * Opportunity_Split__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net ACV Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>