force-app/main/default/objects/Booking_Split__c/fields/Net_Bookings_Total_by_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Net_Bookings_Total_by_Percentage__c</fullName>
    <formula>Booking__r.Net_Bookings_Total__c * Opportunity_Split__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net TCV Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>