force-app/main/default/objects/Booking_Split__c/fields/Net_Subsumed_Renewal_TCV__c.field-meta.xml
<CustomField>
    <fullName>Net_Subsumed_Renewal_TCV__c</fullName>
    <formula>(Booking__r.Net_Subsumed_Renewal_TCV__c * Opportunity_Split__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Subsumed Renewal TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>