force-app/main/default/objects/Booking_Split__c/fields/Opp_PLS_ETM_Theatre__c.field-meta.xml
<CustomField>
    <fullName>Opp_PLS_ETM_Theatre__c</fullName>
    <description>PRDOPS25-1269</description>
    <label>Opp PLS CLOUD ETM Theatre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>