force-app/main/default/objects/Booking_Split__c/fields/Opp_PLS_NCD_ETM_Territory__c.field-meta.xml
<CustomField>
    <fullName>Opp_PLS_NCD_ETM_Territory__c</fullName>
    <description>SAL26-1415</description>
    <label>Opp PLS NCD ETM Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>