force-app/main/default/objects/Booking_Split__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Booking Splits</relationshipLabel>
    <relationshipName>Booking_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>