force-app/main/default/objects/Booking_Split__c/fields/Opportunity_Split__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Split__c</fullName>
    <label>Opportunity Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>