force-app/main/default/objects/Booking_Split__c/fields/Oppty_Trade_Up_Discount__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Trade_Up_Discount__c</fullName>
    <description>FY25SR-498 : To store opportunity trade up discount</description>
    <formula>Booking__r.Oppty_Trade_Up_Discount__c * Opportunity_Split__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade-up Credit TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>