force-app/main/default/objects/Booking_Split__c/fields/Prepayment_Credit__c.field-meta.xml
<CustomField>
    <fullName>Prepayment_Credit__c</fullName>
    <description>FY25SR-498 : To store Prepayment Credit TCV</description>
    <formula>Booking__r.Prepayment_Credit__c *  Opportunity_Split__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prepayment Credit TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>