force-app/main/default/objects/Booking_Split__c/fields/PromoDiscTCV__c.field-meta.xml
<CustomField>
    <fullName>PromoDiscTCV__c</fullName>
    <description>FY25SR-498 : To store promo discount TCV</description>
    <formula>Booking__r.PromoDiscTCV__c *  Opportunity_Split__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo Discount TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>