force-app/main/default/objects/Booking_Split__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity Owner</description>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Booking_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>