force-app/main/default/objects/Booking_Split__c/fields/Theatre__c.field-meta.xml
<CustomField>
    <fullName>Theatre__c</fullName>
    <label>Theatre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>